2015-12-02  Nik Nyby  <nnyby@columbia.edu>

	* Removed IE-specific code.