@@ -613,188 +613,6 @@ var hostHandler = {
         }
     },
 
-    'learn.columbia.edu': {
-        /*and www.mcah.columbia.edu */
-        find: function(callback) {
-            var rv = [];
-            var abs = MediathreadCollect.absolute_url;
-            $('table table table img').each(function() {
-                var matchImg =
-                    String(this.src).match(
-                            /arthum2\/mediafiles\/(\d+)\/(.*)$/);
-                if (matchImg) {
-                    var img = document.createElement('img');
-                    img.src = 'http://www.mcah.columbia.edu/' +
-                        'arthum2/mediafiles/1200/' +
-                        matchImg[2];
-                    var imgData = {
-                        'html': this,
-                        'primary_type': 'image',
-                        'metadata': {},
-                        'sources': {
-                            'url': abs(
-                                this.getAttribute('onclick')
-                                    .match(/item.cgi[^\']+/)[0],
-                                document),
-                            'thumb': this.src,
-                            'image': img.src,
-                            'image-metadata': 'w' + img.width +
-                                'h' + img.height
-                        }
-                    };
-                    if (typeof document.evaluate === 'function') {
-                        // only do metadata if we can do XPath,
-                        // otherwise, it's insane
-                        var ancestor = $(this).parents()
-                            .get(9);
-                        // td[5] for gallery searches,
-                        // td[3] for image portfolios
-                        var cell =
-                            ($(ancestor)
-                             .children('td').length === 5) ?
-                            'td[5]' : 'td[3]';
-                        var tryEval = function(
-                            obj,
-                            name,
-                            xpath,
-                            inArray
-                        ) {
-                            var res = document.evaluate(
-                                xpath,
-                                ancestor,
-                                null,
-                                XPathResult.ORDERED_NODE_SNAPSHOT_TYPE,
-                                null).snapshotItem(0);
-                            if (res) {
-                                var v = res.textContent.replace(/\s+/,
-                                                                ' ');
-                                obj[name] = ((inArray) ? [v] : v);
-                            }
-                        };
-                        //xpath begins right after the tbody/tr[2]/
-                        tryEval(
-                            imgData.sources,
-                            'title',
-                            cell + '/table[2]/tbody/' +
-                                'tr[3]/td/table/tbody/tr/td'
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'creator',
-                            cell + '/table[1]/tbody/' +
-                                'tr[3]/td[1]/table/tbody/tr/td',
-                            true
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'date',
-                            cell + '/table[1]/tbody/' +
-                                'tr[3]/td[3]/table/tbody/tr/td',
-                            true
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'materials',
-                            cell + '/table[3]/tbody/' +
-                                'tr[3]/td[1]/table/tbody/tr/td',
-                            true
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'dimensions',
-                            cell + '/table[3]/tbody/' +
-                                'tr[3]/td[3]/table/tbody/tr/td',
-                            true
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'techniques',
-                            cell + '/table[4]/tbody/' +
-                                'tr[3]/td[1]/table/tbody/tr/td',
-                            true
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'repository',
-                            cell + '/table[5]/tbody/' +
-                                'tr[3]/td[1]/table/tbody/tr/td',
-                            true
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'city',
-                            cell + '/table[5]/tbody/' +
-                                'tr[3]/td[3]/table/tbody/tr/td',
-                            true
-                        );
-                        tryEval(
-                            imgData.metadata,
-                            'note',
-                            cell + '/table[6]/tbody/' +
-                                'tr[3]/td/table/tbody/tr/td',
-                            true
-                        );
-                    }
-                    rv.push(imgData);
-                }
-
-            });
-            var done = 1;
-            if ($('#flashcontent embed').length) {
-                done = 0;
-                var p = document.location.pathname.split('/');
-                p.pop();
-                $.ajax({
-                    url: p.join('/') + '/gallery.xml',
-                    dataType: 'text',
-                    success: function(galleryXml, textStatus, xhr) {
-                        var gxml = MediathreadCollect.xml2dom(galleryXml);
-                        var iPath = $(
-                            'simpleviewerGallery', gxml)
-                            .attr('imagePath');
-                        var tPath = $(
-                            'simpleviewerGallery', gxml)
-                            .attr('thumbPath');
-                        $('image', gxml).each(function() {
-                            var filename = $(
-                                'filename', this).text();
-                            var imageData = {
-                                'html': this,
-                                'primary_type': 'image',
-                                'sources': {
-                                    'title': $('caption', this)
-                                        .text(),
-                                    'image': abs(
-                                        p.join('/') + '/' +
-                                            iPath + filename,document),
-                                    'thumb': abs(
-                                        p.join('/') + '/' +
-                                            tPath + filename,document),
-                                    'url': document.location + '#' +
-                                        filename
-                                }
-                            };
-                            var img = document.createElement('img');
-                            img.src = imageData.sources.image;
-                            imageData.sources['image-metadata'] =
-                                'w' + img.width + 'h' + img.height;
-                            rv.push(imageData);
-                            $('#flashcontent').hide();
-
-                        });
-                        return callback(rv);
-                    },
-                    error: function(err, xhr) {
-                        return callback(rv);
-                    }
-                });
-            }
-            if (done) {
-                return callback(rv);
-            }
-        }
-    },
-
     'vimeo.com': {
         find: function(callback) {
             var videos = $('.video-wrapper');
