@@ -1,3 +1,8 @@
+2015-12-08  Nik Nyby  <nnyby@columbia.edu>
+
+	* Fix image collection on learn.columbia.edu.
+	* Removed realplayer-specific code.
+
 2015-12-02  Nik Nyby  <nnyby@columbia.edu>
 
 	* Removed IE-specific code.
